--- a/odometry1/CMakeLists.txt
+++ b/odometry1/CMakeLists.txt
@@ -8,13 +8,16 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 find_package(telerobot_interfaces REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 include_directories("include/io")
 include_directories("include/protocol")
 
 add_executable(${PROJECT_NAME} src/main.cpp src/retrans.h)
-ament_target_dependencies(${PROJECT_NAME} rclcpp std_msgs geometry_msgs sensor_msgs telerobot_interfaces)
+ament_target_dependencies(${PROJECT_NAME} rclcpp std_msgs geometry_msgs sensor_msgs telerobot_interfaces nav_msgs tf2 tf2_ros)
 
 install(TARGETS
   ${PROJECT_NAME}
