Добавлен контроль головы при помощи джойстика

--- a/joystick_driver/package.xml
+++ b/joystick_driver/package.xml
@@ -10,6 +10,7 @@
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
   <depend>joystick_msgs</depend>
+  <depend>telerobot_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
