--- a/cam_driver/package.xml
+++ b/cam_driver/package.xml
@@ -7,6 +7,9 @@
   <maintainer email="akoshelev2004@yandex.ru">robot</maintainer>
   <license>TODO: License declaration</license>
 
+  <depend>rclpy</depend>
+  <depend>std_msgs</depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
