--- a/gui/package.xml
+++ b/gui/package.xml
@@ -13,6 +13,8 @@
   <test_depend>python3-pytest</test_depend>
 
   <exec_depend>rclpy</exec_depend>
+  <depend>launch</depend>
+  <depend>launch_ros</depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
